[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/cena3.gd" type="Script" id=1]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/brick_double_window.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/brick_door.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/roof.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/block.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/brick_window_1.obj" type="ArrayMesh" id=6]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/obj/wall_brick_1.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Assets/objects/Free Nobiax modular building asset/boxshape.tres" type="Shape" id=8]
[ext_resource path="res://Assets/texture/Free Nobiax modular building asset texture/building_materiais.tres" type="Material" id=9]
[ext_resource path="res://cenas/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://cenas/enviroment.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/objects/Keys/key.fbx" type="PackedScene" id=12]
[ext_resource path="res://cenas/Bloody_altar.tscn" type="PackedScene" id=13]
[ext_resource path="res://cenas/Skull3.tscn" type="PackedScene" id=14]
[ext_resource path="res://cenas/deadBody.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/objects/Keys/keyRed.fbx" type="PackedScene" id=16]
[ext_resource path="res://Assets/objects/Keys/keyYellow.fbx" type="PackedScene" id=17]
[ext_resource path="res://Assets/objects/Keys/keyBlue.fbx" type="PackedScene" id=18]
[ext_resource path="res://Assets/objects/Keys/keyOGA.fbx" type="PackedScene" id=19]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.25215, 1.32121, 0.169258 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 2.5, 1.32268, 0.203581 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1.27524, 1.25422, 0.174664 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.739307, 0.762232, 0.0412884 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 4.12198, 0.0431383, 4.11672 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.51123, 0.348839, 1.03881 )

[sub_resource type="CapsuleShape" id=7]

[node name="sala2" type="Spatial"]
script = ExtResource( 1 )

[node name="enviroment" parent="." instance=ExtResource( 11 )]

[node name="walls" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.110952, 0, 0.98606 )
__meta__ = {
"_edit_lock_": true
}

[node name="wall1" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.88369 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0.158472, 1.28753, -0.00552112 )
shape = ExtResource( 8 )

[node name="wall_brick_2" type="MeshInstance" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -5.0471, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="brick_window_1" type="MeshInstance" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -0.0112305, 0, 0 )
mesh = ExtResource( 6 )
skeleton = NodePath("../wall_brick_1")
material/0 = ExtResource( 9 )

[node name="wall_brick_1" type="MeshInstance" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 2.54962, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="wall_brick_3" type="MeshInstance" parent="walls/wall1"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -2.50652, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="wall2" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.93519, 0, -0.901545 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0.158472, 1.28753, -0.00552112 )
shape = ExtResource( 8 )

[node name="brick_double_window" type="MeshInstance" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -2.59376, 0, 0 )
mesh = ExtResource( 2 )
skeleton = NodePath("../wall_brick_2")
material/0 = ExtResource( 9 )

[node name="wall_brick_2" type="MeshInstance" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -5.13378, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="brick_window_1" type="MeshInstance" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -0.0659776, 0, 0 )
mesh = ExtResource( 6 )
skeleton = NodePath("../wall_brick_1")
material/0 = ExtResource( 9 )

[node name="wall_brick_1" type="MeshInstance" parent="walls/wall2"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 2.41946, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="wall3" type="StaticBody" parent="walls"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 5.28612, 0, -0.967991 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0.158472, 1.28753, -0.00552112 )
shape = ExtResource( 8 )

[node name="brick_double_window" type="MeshInstance" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -2.55028, 0, 0 )
mesh = ExtResource( 2 )
skeleton = NodePath("../wall_brick_2")
material/0 = ExtResource( 9 )

[node name="wall_brick_2" type="MeshInstance" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -5.09523, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="brick_window_1" type="MeshInstance" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -0.0112305, 0, 0 )
mesh = ExtResource( 6 )
skeleton = NodePath("../wall_brick_1")
material/0 = ExtResource( 9 )

[node name="wall_brick_1" type="MeshInstance" parent="walls/wall3"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 2.54962, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="wall4" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.47891, 0, 4.15212 )

[node name="wall_brick_3" type="MeshInstance" parent="walls/wall4"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -6.24069, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("../wall_brick_2")
material/0 = ExtResource( 9 )

[node name="wall_brick_2" type="MeshInstance" parent="walls/wall4"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -3.68819, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("../../porta/brick_door")
material/0 = ExtResource( 9 )

[node name="wall_brick_1" type="MeshInstance" parent="walls/wall4"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 1.4283, 0, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("../../porta/brick_door")
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="walls/wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.70812, 1.26971, -0.0221758 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="walls/wall4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.65568, 1.23946, 0 )
shape = SubResource( 2 )

[node name="porta" type="StaticBody" parent="walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.638, 0, 4.152 )

[node name="brick_door" type="MeshInstance" parent="walls/porta"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, -1.288, 0, 0 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="walls/porta"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30446, 0 )
shape = SubResource( 3 )

[node name="Area" type="Area" parent="walls/porta"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.914337, -0.207644 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="walls/porta/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.020741 )
shape = SubResource( 4 )

[node name="chao" type="StaticBody" parent="."]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1.3, 0, -0.0485374, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="chao"]
shape = SubResource( 5 )

[node name="block" type="MeshInstance" parent="chao"]
transform = Transform( 0.1, 0, 0, 0, 0.001, 0, 0, 0, 0.1, -3.2, 0, 0 )
mesh = ExtResource( 5 )
skeleton = NodePath("../CollisionShape")
material/0 = ExtResource( 9 )

[node name="roof" type="StaticBody" parent="."]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1.3, -0.547713, 2.6103, -0.0894413 )
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="roof"]
shape = SubResource( 5 )

[node name="roof" type="MeshInstance" parent="roof"]
transform = Transform( 0.03, 0, 0, 0, 0.001, 0, 0, 0, 0.03, -4.31993, 0.0137277, -4.09525 )
mesh = ExtResource( 4 )
skeleton = NodePath("")
material/0 = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 10 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.5, 0, 4.3183 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.5, 0.262866, 3.95524 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0670021, 5.03725, -0.252768 )
omni_range = 100.0
omni_shadow_mode = 0

[node name="altarPosition" type="Position3D" parent="."]
transform = Transform( 0.618271, 0, 0.785965, 0, 1, 0, -0.785965, 0, 0.618271, 3.72038, 0, -3.20735 )

[node name="altarPosition2" type="Position3D" parent="."]
transform = Transform( -0.601815, 0, 0.798635, 0, 1, 0, -0.798635, 0, -0.601815, -3.73852, 0, -3.20735 )

[node name="keyBlue" parent="." instance=ExtResource( 18 )]
transform = Transform( 0.0238626, 0, 0.0181817, 0, 0.03, 0, -0.0181817, 0, 0.0238626, -3.59226, 0.947707, -3.02479 )

[node name="altarPosition3" type="Position3D" parent="."]
transform = Transform( -0.642788, 0, -0.766044, 0, 1, 0, 0.766044, 0, -0.642788, -3.63293, -4.76837e-07, 3.79009 )

[node name="keyYellow" parent="." instance=ExtResource( 17 )]
transform = Transform( -0.0234554, 0, 0.0187041, 0, 0.03, 0, -0.0187041, 0, -0.0234554, -3.49243, 0.950807, 3.69449 )

[node name="altarPosition4" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.445546, 0, -3.20735 )

[node name="keyOGA" parent="." instance=ExtResource( 19 )]
transform = Transform( 1.1999, 0, 0.0158751, 0, 1.2, 0, -0.0158751, 0, 1.1999, 0.445546, 0.963223, -3.20735 )

[node name="key" parent="." instance=ExtResource( 12 )]
transform = Transform( -8.74193e-10, -0.000179417, 0.0199992, -7.84259e-12, 0.0199992, 0.000179417, -0.02, 8.67362e-19, -8.74228e-10, 0.304134, 0.946102, -3.16048 )

[node name="altarPositionNull" type="Position3D" parent="."]
transform = Transform( 0.618271, 0, 0.785965, 0, 1, 0, -0.785965, 0, 0.618271, 10.5359, 0, -3.20735 )

[node name="Altar" type="MeshInstance" parent="."]
transform = Transform( 0.618271, 0, 0.785965, 0, 1, 0, -0.785965, 0, 0.618271, 3.72038, 0, -3.20735 )
__meta__ = {
"_edit_lock_": true
}

[node name="Bloody_altar" parent="Altar" instance=ExtResource( 13 )]

[node name="Skull3" parent="Altar" instance=ExtResource( 14 )]
transform = Transform( 0.00454481, 0, -0.599983, 0, 0.6, 0, 0.599983, 0, 0.00454481, 0.0591965, 1.23899, -0.726711 )

[node name="Skull31" parent="Altar" instance=ExtResource( 14 )]
transform = Transform( 0.00454488, 0, -0.599983, 0, 0.6, 0, 0.599983, 0, 0.00454488, 0.0277362, 1.23899, 0.638024 )

[node name="StaticBody" type="StaticBody" parent="Altar"]

[node name="CollisionShape" type="CollisionShape" parent="Altar/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.602892, 0 )
shape = SubResource( 6 )
disabled = true

[node name="keyRed" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.0221466, 0, -0.0202368, 0, 0.03, 0, 0.0202368, 0, 0.0221466, 3.72038, 0.949211, -3.20735 )

[node name="deadBody" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.24415, 0.489399, -1.40263 )
__meta__ = {
"_edit_lock_": true
}

[node name="deadBody" parent="deadBody" instance=ExtResource( 15 )]

[node name="deadBodyPositionNull" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.57803, 0.978798, -2.80526 )

[node name="deadBodyPosition" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.24415, 0.489399, -1.40263 )

[node name="deadBodyPosition2" type="Position3D" parent="."]
transform = Transform( 0.789063, 0, -0.614313, 0, 1, 0, 0.614313, 0, 0.789063, 2.0751, 0.489399, -1.40263 )

[node name="deadBodyPosition3" type="Position3D" parent="."]
transform = Transform( -0.975492, 0, 0.220034, 0, 1, 0, -0.220034, 0, -0.975492, -2.24415, 0.489399, 1.89072 )

[node name="deadBodyPosition4" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.533988, 0.489399, -3.55024 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.56545, 0.965532, 3.61587 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 7 )

[connection signal="body_entered" from="walls/porta/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered_Audio"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited_Audio"]
